# actix-service

./: .env  Cargo.toml  configuration.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  rust.yml
migrations/: 20240515163337_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
