[package]
name = "actix_service"
version = "0.1.0"
edition = "2021"
authors = ["Hector Alvarez <hectoralvarez.dev@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
env_logger = "0.9"
log = "0.4"

# Using table-like toml syntax to avoid a super-long tline
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
panic = "abort"
